@@ -2,7 +2,11 @@ package io.metersphere.bug.service;
 
 import io.metersphere.bug.domain.Bug;
 import io.metersphere.bug.domain.BugContent;
+import io.metersphere.bug.domain.BugContentExample;
+import io.metersphere.bug.domain.BugExample;
+import io.metersphere.bug.dto.request.BugBatchRequest;
 import io.metersphere.bug.dto.request.BugEditRequest;
+import io.metersphere.bug.dto.response.BugCustomFieldDTO;
 import io.metersphere.bug.dto.response.BugDTO;
 import io.metersphere.bug.mapper.BugContentMapper;
 import io.metersphere.bug.mapper.BugMapper;
@@ -12,12 +16,17 @@ import io.metersphere.sdk.util.JSON;
 import io.metersphere.system.log.constants.OperationLogModule;
 import io.metersphere.system.log.constants.OperationLogType;
 import io.metersphere.system.log.dto.LogDTO;
+import io.metersphere.system.log.service.OperationLogService;
 import jakarta.annotation.Resource;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.CollectionUtils;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 
 @Service
 @Transactional(rollbackFor = Exception.class)
@@ -29,6 +38,8 @@ public class BugLogService {
     private BugService bugService;
     @Resource
     private BugContentMapper bugContentMapper;
+    @Resource
+    private OperationLogService operationLogService;
 
 
     /**
@@ -38,8 +49,9 @@ public class BugLogService {
      * @param files 文件
      * @return 日志
      */
+    @SuppressWarnings("unused")
     public LogDTO addLog(BugEditRequest request, List<MultipartFile> files) {
-        LogDTO dto = new LogDTO(request.getProjectId(), null, null, null, OperationLogType.ADD.name(), OperationLogModule.BUG_MANAGEMENT_INDEX, request.getTitle());
+        LogDTO dto = new LogDTO(request.getProjectId(), null, null, null, OperationLogType.ADD.name(), OperationLogModule.BUG_MANAGEMENT_INDEX, getPlatformTitle(request));
         dto.setHistory(true);
         dto.setPath("/bug/add");
         dto.setMethod(HttpMethodConstants.POST.name());
@@ -54,9 +66,10 @@ public class BugLogService {
      * @param files  文件
      * @return 日志
      */
+    @SuppressWarnings("unused")
     public LogDTO updateLog(BugEditRequest request, List<MultipartFile> files) {
         BugDTO history = getOriginalValue(request.getId());
-        LogDTO dto = new LogDTO(request.getProjectId(), null, request.getId(), null, OperationLogType.UPDATE.name(), OperationLogModule.BUG_MANAGEMENT_INDEX, request.getTitle());
+        LogDTO dto = new LogDTO(request.getProjectId(), null, request.getId(), null, OperationLogType.UPDATE.name(), OperationLogModule.BUG_MANAGEMENT_INDEX, getPlatformTitle(request));
         dto.setHistory(true);
         dto.setPath("/bug/update");
         dto.setMethod(HttpMethodConstants.POST.name());
@@ -71,6 +84,7 @@ public class BugLogService {
      * @param id 缺陷ID
      * @return 日志
      */
+    @SuppressWarnings("unused")
     public LogDTO deleteLog(String id) {
         Bug bug = bugMapper.selectByPrimaryKey(id);
         if (bug != null) {
@@ -90,10 +104,11 @@ public class BugLogService {
      * @param id 缺陷ID
      * @return 日志
      */
+    @SuppressWarnings("unused")
     public LogDTO recoverLog(String id) {
         Bug bug = bugMapper.selectByPrimaryKey(id);
         if (bug != null) {
-            LogDTO dto = new LogDTO(bug.getProjectId(), null, bug.getId(), null, OperationLogType.RECOVER.name(), OperationLogModule.BUG_MANAGEMENT_RECYCLE, bug.getTitle());
+            LogDTO dto = new LogDTO(bug.getProjectId(), null, bug.getId(), null, OperationLogType.RECOVER.name(), OperationLogModule.BUG_MANAGEMENT_INDEX, bug.getTitle());
             dto.setHistory(true);
             dto.setPath("/bug/trash/recover");
             dto.setMethod(HttpMethodConstants.GET.name());
@@ -101,6 +116,76 @@ public class BugLogService {
             return dto;
         }
         return null;
+    }
+
+    /**
+     * 批量删除缺陷日志
+     * @param request 请求参数
+     * @return 日志
+     */
+    public List<LogDTO> batchDeleteLog(BugBatchRequest request) {
+        List<String> batchIds = bugService.getBatchIdsByRequest(request);
+        BugExample example = new BugExample();
+        example.createCriteria().andIdIn(batchIds);
+        List<Bug> bugs = bugMapper.selectByExample(example);
+        if (CollectionUtils.isEmpty(bugs)) {
+            return null;
+        }
+        List<LogDTO> logs = new ArrayList<>();
+        bugs.forEach(bug -> {
+            LogDTO dto = new LogDTO(bug.getProjectId(), null, bug.getId(), null, OperationLogType.DELETE.name(), OperationLogModule.BUG_MANAGEMENT_INDEX, bug.getTitle());
+            dto.setHistory(true);
+            dto.setPath("/bug/delete");
+            dto.setMethod(HttpMethodConstants.POST.name());
+            dto.setOriginalValue(JSON.toJSONBytes(bug));
+            logs.add(dto);
+        });
+        return logs;
+    }
+
+    /**
+     * 删除回收站缺陷日志
+     *
+     * @param id 缺陷ID
+     * @return 日志
+     */
+    @SuppressWarnings("unused")
+    public LogDTO deleteTrashLog(String id) {
+        Bug bug = bugMapper.selectByPrimaryKey(id);
+        if (bug != null) {
+            LogDTO dto = new LogDTO(bug.getProjectId(), null, bug.getId(), null, OperationLogType.DELETE.name(), OperationLogModule.BUG_MANAGEMENT_RECYCLE, bug.getTitle());
+            dto.setHistory(true);
+            dto.setPath("/bug/delete");
+            dto.setMethod(HttpMethodConstants.GET.name());
+            dto.setOriginalValue(JSON.toJSONBytes(bug));
+            return dto;
+        }
+        return null;
+    }
+
+    /**
+     * 批量删除回收站缺陷日志
+     * @param request 请求参数
+     * @return 日志
+     */
+    public List<LogDTO> batchDeleteTrashLog(BugBatchRequest request) {
+        List<String> batchIds = bugService.getBatchIdsByRequest(request);
+        BugExample example = new BugExample();
+        example.createCriteria().andIdIn(batchIds);
+        List<Bug> bugs = bugMapper.selectByExample(example);
+        if (CollectionUtils.isEmpty(bugs)) {
+            return null;
+        }
+        List<LogDTO> logs = new ArrayList<>();
+        bugs.forEach(bug -> {
+            LogDTO dto = new LogDTO(bug.getProjectId(), null, bug.getId(), null, OperationLogType.DELETE.name(), OperationLogModule.BUG_MANAGEMENT_RECYCLE, bug.getTitle());
+            dto.setHistory(true);
+            dto.setPath("/bug/delete");
+            dto.setMethod(HttpMethodConstants.POST.name());
+            dto.setOriginalValue(JSON.toJSONBytes(bug));
+            logs.add(dto);
+        });
+        return logs;
     }
 
     /**
@@ -121,6 +206,52 @@ public class BugLogService {
             originalBug.setDescription(bugContent.getDescription());
         }
         // 缺陷自定义字段
-        return bugService.handleCustomField(List.of(originalBug), originalBug.getProjectId()).get(0);
+        return bugService.handleCustomField(List.of(originalBug), originalBug.getProjectId()).getFirst();
+    }
+
+    /**
+     * 获取历史缺陷
+     * @param ids 缺陷ID集合
+     * @return 缺陷DTO
+     */
+    public List<BugDTO> getOriginalValueByIds(List<String> ids) {
+        // 缺陷基础信息
+        List<BugDTO> bugOriginalList = new ArrayList<>();
+        BugExample example = new BugExample();
+        example.createCriteria().andIdIn(ids);
+        List<Bug> bugs = bugMapper.selectByExample(example);
+        BugContentExample contentExample = new BugContentExample();
+        contentExample.createCriteria().andBugIdIn(ids);
+        List<BugContent> bugContents = bugContentMapper.selectByExample(contentExample);
+        bugs.forEach(bug -> {
+            BugDTO originalBug = new BugDTO();
+            BeanUtils.copyBean(originalBug, bug);
+			bugContents.stream().filter(content -> StringUtils.equals(content.getBugId(), bug.getId())).findFirst().ifPresent(bugContent -> originalBug.setDescription(bugContent.getDescription()));
+			bugOriginalList.add(originalBug);
+        });
+        // 缺陷自定义字段
+        return bugService.handleCustomField(bugOriginalList, bugOriginalList.getFirst().getProjectId());
+    }
+
+    /**
+     * 获取缺陷的标题
+     * @param request 请求参数
+     * @return 缺陷标题
+     */
+    private String getPlatformTitle(BugEditRequest request) {
+        Optional<BugCustomFieldDTO> find = request.getCustomFields().stream().filter(field -> StringUtils.equalsAny(field.getId(), "summary", "title")).findFirst();
+        BugCustomFieldDTO titleField = find.orElseGet(BugCustomFieldDTO::new);
+        return StringUtils.isNotBlank(request.getTitle()) ? request.getTitle() : titleField.getValue();
+    }
+
+
+    @SuppressWarnings("unused")
+    public void minderAddLog(BugEditRequest request, List<MultipartFile> files, String orgId, String bugId, String userId) {
+        LogDTO dto = new LogDTO(request.getProjectId(), orgId, bugId, userId, OperationLogType.ADD.name(), OperationLogModule.BUG_MANAGEMENT_INDEX, getPlatformTitle(request));
+        dto.setHistory(true);
+        dto.setPath("/test-plan/functional/case/minder/batch/add-bug");
+        dto.setMethod(HttpMethodConstants.POST.name());
+        dto.setModifiedValue(JSON.toJSONBytes(request));
+        operationLogService.add(dto);
     }
 }
