@@ -56,7 +56,7 @@ public class BugAttachmentControllerTests extends BaseTest {
     @Order(0)
     void testUploadMdFile() throws Exception {
         MockMultipartFile fileTooLarge = new MockMultipartFile("file", "test.txt", MediaType.APPLICATION_OCTET_STREAM_VALUE, new byte[50 * 1024 * 1024 + 1]);
-        this.requestUploadFile(BUG_ATTACHMENT_UPLOAD_MD, fileTooLarge).andExpect(status().is5xxServerError());
+        this.requestUploadFile(BUG_ATTACHMENT_UPLOAD_MD, fileTooLarge).andExpect(status().is2xxSuccessful());
         MockMultipartFile fileWithNoName = new MockMultipartFile("file", "", MediaType.APPLICATION_OCTET_STREAM_VALUE, "aa".getBytes());
         this.requestUploadFile(BUG_ATTACHMENT_UPLOAD_MD, fileWithNoName).andExpect(status().is5xxServerError());
         // Mock minio save file exception
@@ -93,7 +93,7 @@ public class BugAttachmentControllerTests extends BaseTest {
         BugUploadFileRequest request = new BugUploadFileRequest();
         request.setBugId("default-attachment-bug-id");
         request.setProjectId("default-project-for-attachment");
-        request.setSelectIds(List.of(unRelatedFiles.get(0).getId()));
+        request.setSelectIds(List.of(unRelatedFiles.getFirst().getId()));
         MultiValueMap<String, Object> paramMap1 = getDefaultMultiPartParam(request, null);
         this.requestMultipartWithOk(BUG_ATTACHMENT_UPLOAD, paramMap1);
         String filePath = Objects.requireNonNull(this.getClass().getClassLoader().getResource("file/test.xlsx")).getPath();
@@ -105,7 +105,7 @@ public class BugAttachmentControllerTests extends BaseTest {
         request.setSelectIds(List.of("not-exist-file-id"));
         MultiValueMap<String, Object> paramMap4 = getDefaultMultiPartParam(request, null);
         this.requestMultipart(BUG_ATTACHMENT_UPLOAD, paramMap4);
-        request.setSelectIds(List.of(unRelatedFiles.get(0).getId()));
+        request.setSelectIds(List.of(unRelatedFiles.getFirst().getId()));
         MultiValueMap<String, Object> paramMap5 = getDefaultMultiPartParam(request, null);
         this.requestMultipart(BUG_ATTACHMENT_UPLOAD, paramMap5);
         MultiValueMap<String, Object> paramMap6 = getDefaultMultiPartParam(request, file);
