@@ -7,6 +7,7 @@ import io.metersphere.sdk.constants.SessionConstants;
 import io.metersphere.sdk.util.JSON;
 import io.metersphere.system.base.BaseTest;
 import io.metersphere.system.controller.handler.ResultHolder;
+import io.metersphere.system.dto.request.UserInviteRequest;
 import io.metersphere.system.utils.Pager;
 import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.*;
@@ -20,6 +21,8 @@ import org.springframework.test.web.servlet.ResultMatcher;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 
 import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
@@ -34,11 +37,13 @@ public class ProjectMemberControllerTests extends BaseTest {
     public static final String GET_MEMBER = "/project/member/get-member/option";
     public static final String GET_ROLE = "/project/member/get-role/option";
     public static final String ADD_MEMBER = "/project/member/add";
+    public static final String INVITE = "/project/member/invite";
     public static final String UPDATE_MEMBER = "/project/member/update";
     public static final String REMOVE_MEMBER = "/project/member/remove";
     public static final String ADD_ROLE = "/project/member/add-role";
     public static final String BATCH_REMOVE_MEMBER = "/project/member/batch/remove";
     public static final String COMMENT_USER_OPTION = "/project/member/comment/user-option";
+    public static final String UPDATE_MEMBER_ROLE = "/project/member/update-member";
 
     @Test
     @Order(1)
@@ -63,7 +68,7 @@ public class ProjectMemberControllerTests extends BaseTest {
         // 返回的数据量不超过规定要返回的数据量相同
         Assertions.assertTrue(JSON.parseArray(JSON.toJSONString(pageData.getList())).size() <= request.getPageSize());
         // 返回值中取出第一条数据, 并判断name, email, phone是否包含关键字default
-        ProjectUserDTO projectUserDTO = JSON.parseArray(JSON.toJSONString(pageData.getList()), ProjectUserDTO.class).get(0);
+        ProjectUserDTO projectUserDTO = JSON.parseArray(JSON.toJSONString(pageData.getList()), ProjectUserDTO.class).getFirst();
         Assertions.assertTrue(StringUtils.contains(projectUserDTO.getName(), request.getKeyword())
                 || StringUtils.contains(projectUserDTO.getEmail(), request.getKeyword())
                 || StringUtils.contains(projectUserDTO.getPhone(), request.getKeyword()));
@@ -132,6 +137,18 @@ public class ProjectMemberControllerTests extends BaseTest {
         // 权限校验
         request.setProjectId(DEFAULT_PROJECT_ID);
         requestPostPermissionTest(PermissionConstants.PROJECT_USER_ADD, ADD_MEMBER, request);
+
+        //顺便测试邀请
+        UserInviteRequest userInviteRequest = new UserInviteRequest();
+        userInviteRequest.setInviteEmails(new ArrayList<>(Collections.singletonList("abcde12345@qq.com")));
+        userInviteRequest.setUserRoleIds(request.getRoleIds());
+        userInviteRequest.setProjectId("default-project-member-test");
+        this.requestPost(INVITE, userInviteRequest);
+        userInviteRequest.setProjectId("NOT_EXIST_PROJECT_ID_BY_SOMEBODY_J");
+        this.requestPost(INVITE, userInviteRequest);
+        // 权限校验
+        userInviteRequest.setProjectId(DEFAULT_PROJECT_ID);
+        requestPostPermissionTest(PermissionConstants.PROJECT_USER_INVITE, INVITE, userInviteRequest);
     }
 
     @Test
@@ -284,5 +301,22 @@ public class ProjectMemberControllerTests extends BaseTest {
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(resultMatcher)
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON));
+    }
+
+    @Test
+    @Order(18)
+    public void testUpdateMemberRole() throws Exception {
+        // 不存在的用户组
+        ProjectMemberEditRequest request = new ProjectMemberEditRequest();
+        request.setProjectId("default-project-member-test");
+        request.setUserId("default-project-member-user-1");
+        request.setRoleIds(List.of("project_admin_x"));
+        this.requestPost(UPDATE_MEMBER, request, status().isOk());
+        // 存在的用户组
+        request.setRoleIds(List.of("project_admin", "project_member"));
+        this.requestPost(UPDATE_MEMBER, request, status().isOk());
+        // 权限校验
+        request.setProjectId(DEFAULT_PROJECT_ID);
+        requestPostPermissionTest(PermissionConstants.PROJECT_USER_UPDATE, UPDATE_MEMBER, request);
     }
 }
