@@ -14,6 +14,7 @@ import io.metersphere.system.dto.*;
 import io.metersphere.system.dto.request.*;
 import io.metersphere.system.dto.sdk.OptionDTO;
 import io.metersphere.system.dto.user.UserExtendDTO;
+import io.metersphere.system.dto.user.UserRoleOptionDto;
 import io.metersphere.system.log.constants.OperationLogModule;
 import io.metersphere.system.log.constants.OperationLogType;
 import io.metersphere.system.log.dto.LogDTO;
@@ -81,6 +82,8 @@ public class OrganizationService {
     private static final String REMOVE_MEMBER_PATH = "/system/organization/remove-member";
     public static final Integer DEFAULT_REMAIN_DAY_COUNT = 30;
     private static final Long DEFAULT_ORGANIZATION_NUM = 100001L;
+    @Resource
+    private ExtUserRoleRelationMapper extUserRoleRelationMapper;
 
     /**
      * 分页获取系统下组织列表
@@ -88,13 +91,13 @@ public class OrganizationService {
      * @param organizationRequest 请求参数
      * @return 组织集合
      */
-    public List<OrganizationDTO> list(OrganizationRequest organizationRequest) {
+    public List<OrganizationDTO> list(OrganizationRequest organizationRequest, String currentUser) {
         List<OrganizationDTO> organizationDTOS = extOrganizationMapper.list(organizationRequest);
         if (CollectionUtils.isEmpty(organizationDTOS)) {
             return new ArrayList<>();
         }
         List<OrganizationDTO> organizations = buildOrgAdminInfo(organizationDTOS);
-        return buildExtraInfo(organizations);
+        return buildExtraInfo(organizations, currentUser);
     }
 
     /**
@@ -207,7 +210,19 @@ public class OrganizationService {
      * @return 组织成员集合
      */
     public List<UserExtendDTO> getMemberListBySystem(OrganizationRequest request) {
-        return extOrganizationMapper.listMember(request);
+        List<UserExtendDTO> userExtendDTOS = extOrganizationMapper.listMember(request);
+        if (CollectionUtils.isNotEmpty(userExtendDTOS)) {
+            List<String> userIds = userExtendDTOS.stream().map(UserExtendDTO::getId).toList();
+            List<UserRoleOptionDto> userRole = extUserRoleRelationMapper.selectUserRoleByUserIds(userIds, request.getOrganizationId());
+            Map<String, List<UserRoleOptionDto>> roleMap = userRole.stream().collect(Collectors.groupingBy(UserRoleOptionDto::getUserId));
+            userExtendDTOS.forEach(user -> {
+                if (roleMap.containsKey(user.getId())) {
+                    user.setUserRoleList(roleMap.get(user.getId()));
+                }
+            });
+
+        }
+        return userExtendDTOS;
     }
 
     public void deleteOrganization(String organizationId) {
@@ -258,17 +273,51 @@ public class OrganizationService {
      */
     public void addMemberBySystem(OrganizationMemberRequest organizationMemberRequest, String createUserId) {
         List<LogDTO> logs = new ArrayList<>();
-        OrganizationMemberBatchRequest batchRequest = new OrganizationMemberBatchRequest();
-        batchRequest.setOrganizationIds(List.of(organizationMemberRequest.getOrganizationId()));
-        batchRequest.setUserIds(organizationMemberRequest.getUserIds());
-        addMemberBySystem(batchRequest, createUserId);
+        addMemberAndGroup(organizationMemberRequest, createUserId);
         // 添加日志
         UserExample example = new UserExample();
-        example.createCriteria().andIdIn(batchRequest.getUserIds());
+        example.createCriteria().andIdIn(organizationMemberRequest.getUserIds());
         List<User> users = userMapper.selectByExample(example);
         List<String> nameList = users.stream().map(User::getName).collect(Collectors.toList());
         setLog(organizationMemberRequest.getOrganizationId(), createUserId, OperationLogType.ADD.name(), Translator.get("add") + Translator.get("organization_member_log") + ": " + StringUtils.join(nameList, ","), ADD_MEMBER_PATH, null, null, logs);
         operationLogService.batchAdd(logs);
+    }
+
+    /**
+     * 系统-组织与项目-组织-添加成员（用户+用户组）
+     *
+     * @param request
+     * @param createUserId
+     */
+    private void addMemberAndGroup(OrganizationMemberRequest request, String createUserId) {
+        checkOrgExistByIds(List.of(request.getOrganizationId()));
+        Map<String, User> userMap = checkUserExist(request.getUserIds());
+        List<UserRoleRelation> userRoleRelations = new ArrayList<>();
+        for (String userId : request.getUserIds()) {
+            if (userMap.get(userId) == null) {
+                throw new MSException(Translator.get("user.not.exist") + ", id: " + userId);
+            }
+            //组织用户关系已存在, 不再重复添加
+            UserRoleRelationExample example = new UserRoleRelationExample();
+            example.createCriteria().andSourceIdEqualTo(request.getOrganizationId()).andUserIdEqualTo(userId);
+            if (userRoleRelationMapper.countByExample(example) > 0) {
+                continue;
+            }
+            request.getUserRoleIds().forEach(userRoleId -> {
+                UserRoleRelation userRoleRelation = new UserRoleRelation();
+                userRoleRelation.setId(IDGenerator.nextStr());
+                userRoleRelation.setUserId(userId);
+                userRoleRelation.setSourceId(request.getOrganizationId());
+                userRoleRelation.setRoleId(userRoleId);
+                userRoleRelation.setCreateTime(System.currentTimeMillis());
+                userRoleRelation.setCreateUser(createUserId);
+                userRoleRelation.setOrganizationId(request.getOrganizationId());
+                userRoleRelations.add(userRoleRelation);
+            });
+        }
+        if (CollectionUtils.isNotEmpty(userRoleRelations)) {
+            userRoleRelationMapper.batchInsert(userRoleRelations);
+        }
     }
 
     /**
@@ -352,7 +401,7 @@ public class OrganizationService {
         OrganizationExample example = new OrganizationExample();
         example.createCriteria().andNumEqualTo(100001L);
         List<Organization> organizations = organizationMapper.selectByExample(example);
-        Organization organization = organizations.get(0);
+        Organization organization = organizations.getFirst();
         BeanUtils.copyBean(organizationDTO, organization);
         return organizationDTO;
     }
@@ -460,13 +509,13 @@ public class OrganizationService {
 
     private Map<String, User> getUserMap(OrganizationMemberExtendRequest organizationMemberExtendRequest) {
         Map<String, User> userMap;
-        if(organizationMemberExtendRequest.isSelectAll()) {
+        if (organizationMemberExtendRequest.isSelectAll()) {
             OrganizationRequest organizationRequest = new OrganizationRequest();
             BeanUtils.copyBean(organizationRequest, organizationMemberExtendRequest);
             List<OrgUserExtend> orgUserExtends = extOrganizationMapper.listMemberByOrg(organizationRequest);
             List<String> excludeIds = organizationMemberExtendRequest.getExcludeIds();
             if (CollectionUtils.isNotEmpty(excludeIds)) {
-                userMap = orgUserExtends.stream().filter(user->!excludeIds.contains(user.getId())).collect(Collectors.toMap(User::getId, user -> user));
+                userMap = orgUserExtends.stream().filter(user -> !excludeIds.contains(user.getId())).collect(Collectors.toMap(User::getId, user -> user));
             } else {
                 userMap = orgUserExtends.stream().collect(Collectors.toMap(User::getId, user -> user));
             }
@@ -550,13 +599,13 @@ public class OrganizationService {
         List<String> projectIds = orgMemberExtendProjectRequest.getProjectIds();
         //用户不在当前组织内过掉
         Map<String, User> userMap;
-        if(orgMemberExtendProjectRequest.isSelectAll()) {
+        if (orgMemberExtendProjectRequest.isSelectAll()) {
             OrganizationRequest organizationRequest = new OrganizationRequest();
             BeanUtils.copyBean(organizationRequest, orgMemberExtendProjectRequest);
             List<OrgUserExtend> orgUserExtends = extOrganizationMapper.listMemberByOrg(organizationRequest);
             List<String> excludeIds = orgMemberExtendProjectRequest.getExcludeIds();
             if (CollectionUtils.isNotEmpty(excludeIds)) {
-                userMap = orgUserExtends.stream().filter(user->!excludeIds.contains(user.getId())).collect(Collectors.toMap(User::getId, user -> user));
+                userMap = orgUserExtends.stream().filter(user -> !excludeIds.contains(user.getId())).collect(Collectors.toMap(User::getId, user -> user));
             } else {
                 userMap = orgUserExtends.stream().collect(Collectors.toMap(User::getId, user -> user));
             }
@@ -665,7 +714,7 @@ public class OrganizationService {
      * @param organizationMemberUpdateRequest 请求参数
      * @param createUserId                    创建人ID
      */
-    public void updateMember(OrganizationMemberUpdateRequest organizationMemberUpdateRequest, String createUserId) {
+    public void updateMember(OrganizationMemberUpdateRequest organizationMemberUpdateRequest, String createUserId, String path, String module) {
         String organizationId = organizationMemberUpdateRequest.getOrganizationId();
         //校验组织是否存在
         checkOrgExistById(organizationId);
@@ -686,7 +735,7 @@ public class OrganizationService {
         List<LogDTO> logDTOList = new ArrayList<>();
         //更新用户组
         List<String> userRoleIds = organizationMemberUpdateRequest.getUserRoleIds();
-        updateUserRoleRelation(createUserId, organizationId, user, userRoleIds, sqlSession, logDTOList);
+        updateUserRoleRelation(createUserId, organizationId, user, userRoleIds, sqlSession, logDTOList, path, module);
         //更新项目
         List<String> projectIds = organizationMemberUpdateRequest.getProjectIds();
         if (CollectionUtils.isNotEmpty(projectIds)) {
@@ -700,20 +749,6 @@ public class OrganizationService {
                 userRoleRelationExample = new UserRoleRelationExample();
                 userRoleRelationExample.createCriteria().andUserIdEqualTo(memberId).andSourceIdIn(projectInDBInOrgIds);
                 userRoleRelationMapper.deleteByExample(userRoleRelationExample);
-                //add Log
-                for (String projectInDBInOrgId : projectInDBInOrgIds) {
-                    String path = "/organization/update-member";
-                    LogDTO dto = new LogDTO(
-                            projectInDBInOrgId,
-                            organizationId,
-                            memberId,
-                            createUserId,
-                            OperationLogType.UPDATE.name(),
-                            OperationLogModule.PROJECT_MANAGEMENT_PERMISSION_MEMBER,
-                            user.getName());
-                    setLog(dto, path, logDTOList, "");
-                }
-
             }
         }
 
@@ -740,17 +775,6 @@ public class OrganizationService {
             UserRoleRelation userRoleRelation = buildUserRoleRelation(createUserId, memberId, projectId, InternalUserRole.PROJECT_MEMBER.getValue(), organizationId);
             userRoleRelation.setOrganizationId(organizationId);
             userRoleRelationMapper.insert(userRoleRelation);
-            //add Log
-            String path = "/organization/update-member";
-            LogDTO dto = new LogDTO(
-                    projectId,
-                    organizationId,
-                    memberId,
-                    createUserId,
-                    OperationLogType.UPDATE.name(),
-                    OperationLogModule.PROJECT_MANAGEMENT_PERMISSION_MEMBER,
-                    user.getName());
-            setLog(dto, path, logDTOList, userRoleRelation);
         });
     }
 
@@ -766,7 +790,7 @@ public class OrganizationService {
         return userRoleRelation;
     }
 
-    private void updateUserRoleRelation(String createUserId, String organizationId, User user, List<String> userRoleIds, SqlSession sqlSession, List<LogDTO> logDTOList) {
+    private void updateUserRoleRelation(String createUserId, String organizationId, User user, List<String> userRoleIds, SqlSession sqlSession, List<LogDTO> logDTOList, String path, String module) {
         //检查用户组是否是组织级别用户组
         String memberId = user.getId();
         Map<String, UserRole> userRoleMap = checkUseRoleExist(userRoleIds, organizationId);
@@ -780,18 +804,17 @@ public class OrganizationService {
             UserRoleRelation userRoleRelation = buildUserRoleRelation(createUserId, memberId, organizationId, userRoleId, organizationId);
             userRoleRelation.setOrganizationId(organizationId);
             userRoleRelationMapper.insert(userRoleRelation);
-            //add Log
-            String path = "/organization/update-member";
-            LogDTO dto = new LogDTO(
-                    OperationLogConstants.ORGANIZATION,
-                    organizationId,
-                    memberId,
-                    createUserId,
-                    OperationLogType.UPDATE.name(),
-                    OperationLogModule.SETTING_ORGANIZATION_MEMBER,
-                    user.getName());
-            setLog(dto, path, logDTOList, userRoleRelation);
         });
+        //add Log
+        LogDTO dto = new LogDTO(
+                OperationLogConstants.ORGANIZATION,
+                organizationId,
+                memberId,
+                createUserId,
+                OperationLogType.UPDATE.name(),
+                module,
+                user.getName());
+        setLog(dto, path, logDTOList, userRoleInDBInOrgIds);
     }
 
     /**
@@ -877,7 +900,7 @@ public class OrganizationService {
      *
      * @param organizationId 组织ID
      */
-    private void checkOrgExistById(String organizationId) {
+    public void checkOrgExistById(String organizationId) {
         Organization organization = organizationMapper.selectByPrimaryKey(organizationId);
         if (organization == null) {
             throw new MSException(Translator.get("organization_not_exist"));
@@ -891,7 +914,7 @@ public class OrganizationService {
      * @param organizationId 组织ID
      * @return 用户组集合
      */
-    private Map<String, UserRole> checkUseRoleExist(List<String> userRoleIds, String organizationId) {
+    public Map<String, UserRole> checkUseRoleExist(List<String> userRoleIds, String organizationId) {
         UserRoleExample userRoleExample = new UserRoleExample();
         List<String> scopeIds = Arrays.asList(UserRoleEnum.GLOBAL.toString(), organizationId);
         userRoleExample.createCriteria().andIdIn(userRoleIds).andTypeEqualTo(UserRoleType.ORGANIZATION.toString()).andScopeIdIn(scopeIds);
@@ -963,7 +986,7 @@ public class OrganizationService {
      * @param organizationDTOS 组织集合
      * @return 组织集合
      */
-    private List<OrganizationDTO> buildExtraInfo(List<OrganizationDTO> organizationDTOS) {
+    private List<OrganizationDTO> buildExtraInfo(List<OrganizationDTO> organizationDTOS, String currentUser) {
         List<String> userIds = new ArrayList<>();
         userIds.addAll(organizationDTOS.stream().map(OrganizationDTO::getCreateUser).toList());
         userIds.addAll(organizationDTOS.stream().map(OrganizationDTO::getUpdateUser).toList());
@@ -971,6 +994,9 @@ public class OrganizationService {
         Map<String, String> userMap = userLoginService.getUserNameMap(userIds.stream().distinct().toList());
         List<String> ids = organizationDTOS.stream().map(OrganizationDTO::getId).toList();
         List<OrganizationCountDTO> orgCountList = extOrganizationMapper.getCountByIds(ids);
+        // 是否拥有组织
+        boolean isSuper = baseUserMapper.isSuperUser(currentUser);
+        List<String> relatedOrganizationIds = extOrganizationMapper.getRelatedOrganizationIds(currentUser);
         Map<String, OrganizationCountDTO> orgCountMap = orgCountList.stream().collect(Collectors.toMap(OrganizationCountDTO::getId, count -> count));
         organizationDTOS.forEach(organizationDTO -> {
             organizationDTO.setCreateUser(userMap.get(organizationDTO.getCreateUser()));
@@ -981,6 +1007,7 @@ public class OrganizationService {
             if (BooleanUtils.isTrue(organizationDTO.getDeleted())) {
                 organizationDTO.setRemainDayCount(getDeleteRemainDays(organizationDTO.getDeleteTime()));
             }
+            organizationDTO.setSwitchAndEnter(isSuper || relatedOrganizationIds.contains(organizationDTO.getId()));
         });
         return organizationDTOS;
     }
@@ -1138,6 +1165,7 @@ public class OrganizationService {
 
     /**
      * 获取当前用户所拥有的组织
+     *
      * @param userId 用户ID
      * @return 组织下拉选项
      */
